[FIX] refactor code in hotel and room